...
import br.com.alura.panucci.ui.theme.caveatFont
import br.com.alura.panucci.ui.uistate.MenuListUiState

@Composable
fun MenuListScreen(
    modifier: Modifier = Modifier,
    title: String = "Menu",
    onProductClick: (Product) -> Unit = {},
    uiState: MenuListUiState = MenuListUiState()
) {
    val products = uiState.products
    Column(
        modifier.fillMaxSize()
...
                MenuProductCard(
                    product = p,
                    Modifier
                        .clickable {
                            onProductClick(p)
                        }.semantics {
                            contentDescription = "Menu Item Product"
                        }
                )
            }
        }
    }
}
...
