...
import br.com.alura.panucci.ui.theme.caveatFont
import br.com.alura.panucci.ui.uistate.HighlightsListUiState

@Composable
fun HighlightsListScreen(
    modifier: Modifier = Modifier,
    title: String = "Destaques do dia",
    onOrderClick: () -> Unit = {},
    onProductClick: (Product) -> Unit = {},
    uiState: HighlightsListUiState = HighlightsListUiState()
) {
    val products = uiState.products
    Column(
...
        ) {
            items(products) { p ->
                HighlightProductCard(
                    product = p,
                    Modifier.clickable {
                        onProductClick(p)
                    }.semantics { contentDescription = "Highlight Item Card Product" },
                    onOrderClick = onOrderClick
                )
            }
        }
    }
}
...
