...
import br.com.alura.panucci.ui.uistate.DrinksListUiState

@OptIn(ExperimentalFoundationApi::class)
@Composable
fun DrinksListScreen(
    modifier: Modifier = Modifier,
    title: String = "Bebidas",
    columns: Int = 2,
    onProductClick: (Product) -> Unit = {},
    uiState: DrinksListUiState = DrinksListUiState()
) {
    val products = uiState.products
    Column(
...
            items(products) { p ->
                DrinkProductCard(
                    product = p,
                    Modifier.clickable {
                        onProductClick(p)
                    }.semantics {
                        contentDescription = "Drinks Item Card Product"
                    }
                )
            }
        }
    }
}
...
